<resources>
    <string name="app_name">SemTempo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_text">Entrar</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Conectado como: %s</string>
    <string name="signed_in">Contectado</string>
    <string name="signing_in">Entrando...</string>
    <string name="signed_out">Deslogado</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Sair</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">375885813662-45n37ttrl7mqfjotgna1fqdm2qksl8j1.apps.googleusercontent.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recent_task">Atividades recentes</string>
    <string name="see_more">Visualizar mais...</string>
    <string name="weekly">Acompanhamento semanal</string>
    <string name="time_spent">Tempo gasto *</string>
    <string name="task_name">Nome da Atividade *</string>
    <string name="task_priority">Prioridade *</string>
    <string name="registered_tasks">Atividades registradas</string>
    <string name="no_tasks_warn">Sem atividades :(</string>
    <string name="history">Histórico Comparativo</string>
    <string name="total_hours">Horas investidas na semana:</string>
    <string name="text_rank">Ranking semanal</string>
    <string name="categories_default">Categoria</string>
    <string name="tags">Tags</string>

</resources>
