<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.semtempo.fragments.CategoriesFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/scrollViewHome">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/weekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:textSize="24sp"
                android:id="@+id/text_chart"/>

            <TextView
                android:text="@string/total_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:layout_below="@id/text_chart"
                android:id="@+id/total_hours"/>

            <com.txusballesteros.widgets.FitChart
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:strokeSize="25dp"
                android:id="@+id/fitChart"
                app:animationMode="overdraw"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/total_hours"/>

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/subtitles"
                android:layout_below="@id/fitChart"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:layout_alignLeft="@id/fitChart"
                android:layout_marginLeft="-20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="50sp"
                android:layout_alignTop="@+id/fitChart"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="67dp"
                android:id="@+id/text_perc"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="20dp"
                android:layout_below="@id/subtitles"
                android:id="@+id/view1"></View>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_below="@id/view1"
                tools:context="com.kunai.switchtest.MainActivity">

                <TextView
                    android:id="@+id/toogle_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Clique para mudar Historico: " />

                <ToggleButton
                    android:id="@+id/toogle_hist_type"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textOff="Hist. Geral"
                    android:textOn="Hist. Semanal"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/toogle_info"
                    android:background="@drawable/btn_toogle_categories"/>
                  />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/no_tasks_warn"
                android:textColor="@android:color/white"
                android:id="@+id/no_task_warn"
                android:gravity="center"
                android:textSize="26sp"
                android:background="#fc4242"
                android:textAlignment="center"/>

        </RelativeLayout>


    </ScrollView>
</RelativeLayout>